<?xml version="1.0" encoding="utf-8"?>
<resources>
<!--     <string name="already_open">Open</string> -->
<!--     <string name="already_close">Closed</string> -->
<!--     <string name="teststr">Press the button to see the effect</string> -->
<!--     <string name="about_info">Will工作室版权所有</string> -->

    <string name="app_name">WillCall Pro</string>
    <string name="btn_switch">Switch</string>
    <string name="btn_test">Test</string>
    <string name="ringing_Time">Ring length: </string>
    <string name="Test">Test</string>
    <string name="accept">Accept</string>
    <string name="setting_theme">Theme</string>
    <string name="theme_classic">Classic</string>
    <string name="theme_windows">Windows</string> 
    <string name="theme_android">Android</string>
    <string name="theme_iphone">Iphone</string>
    <string name="theme_colorful">Colorful</string>
    <string name="unknow_contact_name">unknown</string>
    
    <string name="second">\"</string>
    <string name="about_copyright">Copyright ® 2012 Will Team. All Rights Reserved</string>

</resources>