<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@android:color/darker_gray"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/test_button"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_weight="0"
        android:background="@color/setting_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="bottom|left"
            android:paddingBottom="5dp"
            android:paddingLeft="10dp"
            android:text="@string/setting_theme"
            android:textColor="@android:color/white"
            android:textSize="30sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/setting_theme_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="2dp"
            android:layout_marginRight="10dp"
            android:layout_weight="2"
            android:gravity="center_vertical|right"
            android:text="@string/theme_classic"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="italic"/>
    </LinearLayout>

    <Gallery
        android:id="@+id/images_gallery"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="30dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:spacing="16dp" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:layout_weight="0"
        android:background="@color/setting_bg"
        android:orientation="horizontal" >

        <ImageButton
            android:id="@+id/setting_theme_goback_btn"
            android:layout_width="50dp"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_normal"
            android:src="@drawable/setting_back"
            android:scaleType="center"/>
		<LinearLayout
		    android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@android:color/white"/>
        <Button
            android:id="@+id/setting_theme_accept_btn"
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:background="@drawable/btn_normal"
            android:text="@string/accept"
            android:textColor="@android:color/white"
            android:textSize="24sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>