<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/lib/com.google.ads"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <com.google.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        ads:adSize="BANNER"
        ads:adUnitId="a1512426db231ae"
        ads:loadAdOnCreate="true" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="@android:color/background_light"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@color/setting_bg"
            android:orientation="horizontal" >

            <TextView
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom|left"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:text="@string/btn_switch"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />

            <ToggleButton
                android:layout_weight="0"
                android:id="@+id/button"
                android:layout_width="100dp"
                android:layout_height="50dp"
                android:layout_marginRight="8dp"
                android:text="@string/btn_switch"
                android:textColor="@android:color/white"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal" >
        </LinearLayout>

        <LinearLayout
            android:id="@+id/test_button"
            android:layout_width="fill_parent"
            android:layout_height="60dp"
            android:gravity="center_vertical"
            android:background="@drawable/btn_normal"
            android:orientation="horizontal" >

            <TextView
                android:layout_weight="1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="bottom|left"
                android:paddingLeft="10dp"
                android:paddingBottom="5dp"
                android:text="@string/setting_theme"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/setting_main_theme_text"
                android:layout_weight="2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical|right"
                android:text="classic"
                android:textColor="@android:color/white"
                android:textSize="16sp"/>
			<ImageView 
			    android:layout_weight="0"
			    android:layout_width="wrap_content"
			    android:layout_height="wrap_content"
			    android:src="@drawable/setting_go"/>
<!--             <Button -->
<!--                 android:id="@+id/test_button" -->
<!--                 android:layout_width="100dp" -->
<!--                 android:layout_height="50dp" -->
<!--                 android:layout_marginRight="8dp" -->
<!--                 android:layout_weight="0" -->
<!--                 android:text="@string/btn_test" -->
<!--                 android:textColor="@android:color/white" -->
<!--                 android:textStyle="bold" /> -->
        </LinearLayout>
		<LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:background="@android:color/white"
            android:orientation="horizontal" >
        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_margin="10dp"
            android:gravity="center_horizontal|bottom"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginRight="8dp" >

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_gravity="center"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/ic_launcher" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginLeft="5dp"
                    android:text="@string/app_name"
                    android:textSize="25dp" >
                </TextView>
            </LinearLayout>

            <TextView
                android:id="@+id/about_version"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/app_name"
                android:layout_margin="3dp" 
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:gravity="center"
                android:text="@string/about_copyright"
                android:textSize="14sp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>